# arugula

./: Cargo.toml  LICENSE.txt  README.md
src/: lib.rs
src/rest/: authentication.rs  emoji_custom.rs  misc.rs  mod.rs  subscriptions.rs
