[package]
name = "arugula"
version = "0.1.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "^0", features = ["serde"] }
reqwest = { version = "^0", features = ["blocking", "json"] }
serde = { version = "^1", features = ["derive"] }
